prql-compiler/src/semantic/snapshots/prql_compiler__semantic__materializer__test__materialize_3.snap
---
source: prql-compiler/src/semantic/materializer.rs
expression: mat
---
- Pipeline:
    - From:
        name: prices
        alias: ~
    - Derive:
        - NamedExpr:
            name: return_total
            expr:
              SString:
                - String: "IF(is_valid_price, "
                - Expr:
                    Expr:
                      - Expr:
                          - Expr:
                              - Ident: prices_adj
                              - Raw: /
                              - Expr:
                                  - SString:
                                      - String: lag_day_todo(
                                      - Expr:
                                          Ident: prices_adj
                                      - String: )
                          - Raw: "-"
                          - Raw: "1"
                          - Raw: +
                          - Ident: div_ret
                - String: ", NULL)"
        - NamedExpr:
            name: return_usd
            expr:
              SString:
                - String: "IF(is_valid_price, "
                - Expr:
                    Expr:
                      - Expr:
                          - Expr:
                              - Ident: prices_usd
                              - Raw: /
                              - Expr:
                                  - SString:
                                      - String: lag_day_todo(
                                      - Expr:
                                          Ident: prices_usd
                                      - String: )
                          - Raw: "-"
                          - Raw: "1"
                          - Raw: +
                          - Ident: div_ret
                - String: ", NULL)"
        - NamedExpr:
            name: return_excess
            expr:
              Expr:
                - Expr:
                    - Expr:
                        - SString:
                            - String: "IF(is_valid_price, "
                            - Expr:
                                Expr:
                                  - Expr:
                                      - Expr:
                                          - Ident: prices_adj
                                          - Raw: /
                                          - Expr:
                                              - SString:
                                                  - String: lag_day_todo(
                                                  - Expr:
                                                      Ident: prices_adj
                                                  - String: )
                                      - Raw: "-"
                                      - Raw: "1"
                                      - Raw: +
                                      - Ident: div_ret
                            - String: ", NULL)"
                        - Raw: "-"
                        - Raw: "0.2"
                - Raw: /
                - Raw: "252"
        - NamedExpr:
            name: return_usd_excess
            expr:
              Expr:
                - Expr:
                    - Expr:
                        - SString:
                            - String: "IF(is_valid_price, "
                            - Expr:
                                Expr:
                                  - Expr:
                                      - Expr:
                                          - Ident: prices_usd
                                          - Raw: /
                                          - Expr:
                                              - SString:
                                                  - String: lag_day_todo(
                                                  - Expr:
                                                      Ident: prices_usd
                                                  - String: )
                                      - Raw: "-"
                                      - Raw: "1"
                                      - Raw: +
                                      - Ident: div_ret
                            - String: ", NULL)"
                        - Raw: "-"
                        - Raw: "0.2"
                - Raw: /
                - Raw: "252"
    - Select:
        - Ident: date
        - Ident: sec_id
        - SString:
            - String: "IF(is_valid_price, "
            - Expr:
                Expr:
                  - Expr:
                      - Expr:
                          - Ident: prices_adj
                          - Raw: /
                          - Expr:
                              - SString:
                                  - String: lag_day_todo(
                                  - Expr:
                                      Ident: prices_adj
                                  - String: )
                      - Raw: "-"
                      - Raw: "1"
                      - Raw: +
                      - Ident: div_ret
            - String: ", NULL)"
        - SString:
            - String: "IF(is_valid_price, "
            - Expr:
                Expr:
                  - Expr:
                      - Expr:
                          - Ident: prices_usd
                          - Raw: /
                          - Expr:
                              - SString:
                                  - String: lag_day_todo(
                                  - Expr:
                                      Ident: prices_usd
                                  - String: )
                      - Raw: "-"
                      - Raw: "1"
                      - Raw: +
                      - Ident: div_ret
            - String: ", NULL)"
        - Expr:
            - Expr:
                - Expr:
                    - SString:
                        - String: "IF(is_valid_price, "
                        - Expr:
                            Expr:
                              - Expr:
                                  - Expr:
                                      - Ident: prices_adj
                                      - Raw: /
                                      - Expr:
                                          - SString:
                                              - String: lag_day_todo(
                                              - Expr:
                                                  Ident: prices_adj
                                              - String: )
                                  - Raw: "-"
                                  - Raw: "1"
                                  - Raw: +
                                  - Ident: div_ret
                        - String: ", NULL)"
                    - Raw: "-"
                    - Raw: "0.2"
            - Raw: /
            - Raw: "252"
        - Expr:
            - Expr:
                - Expr:
                    - SString:
                        - String: "IF(is_valid_price, "
                        - Expr:
                            Expr:
                              - Expr:
                                  - Expr:
                                      - Ident: prices_usd
                                      - Raw: /
                                      - Expr:
                                          - SString:
                                              - String: lag_day_todo(
                                              - Expr:
                                                  Ident: prices_usd
                                              - String: )
                                  - Raw: "-"
                                  - Raw: "1"
                                  - Raw: +
                                  - Ident: div_ret
                        - String: ", NULL)"
                    - Raw: "-"
                    - Raw: "0.2"
            - Raw: /
            - Raw: "252"

