prql-compiler/src/semantic/snapshots/prql_compiler__semantic__materializer__test__replace_variables_2.snap
---
source: prql-compiler/src/semantic/materializer.rs
expression: "&mat"
---
- Pipeline:
    - From:
        name: employees
        alias: ~
    - Filter:
        - Expr:
            - Ident: country
            - Raw: "="
            - String: USA
    - Filter:
        - Expr:
            - Expr:
                - Expr:
                    - Ident: salary
                    - Raw: +
                    - Ident: payroll_tax
                - Raw: +
                - Ident: benefits_cost
            - Raw: ">"
            - Raw: "0"
    - Aggregate:
        by:
          - Ident: title
          - Ident: country
        select: []
    - Filter:
        - Expr:
            - SString:
                - String: SUM(
                - Expr:
                    Expr:
                      - Expr:
                          - Ident: salary
                          - Raw: +
                          - Ident: payroll_tax
                      - Raw: +
                      - Ident: benefits_cost
                - String: )
            - Raw: ">"
            - Raw: "200"
    - Take: 20

